# bee_os

./: Cargo.toml  README.md
kernel/: Cargo.toml
kernel/src/: display.rs  main.rs  serial.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x64/: gdt.rs  interrupts.rs  mod.rs
kernel/src/arch/x86_64/: exceptions.rs  interrupts.rs  mod.rs
src/: main.rs
